fix(client-sdk): address ocr review findings in HA router and e2e scripts
- FailoverRouter: wrap node-exhaustion error as IOException, synchronize
  failover() to close a read-check-write race on failoverIndex
- ThreadPoolAutoConfiguration: parse routing-algorithm only in cluster mode,
  log when circuit-breaker config is ignored in single mode, dedupe the
  degraded-supplier selection into one helper
- ThreadPoolProperties: catch parser errors in the mode/server-url validator
  instead of letting them escape Bean Validation, validate routing-algorithm
  against the known enum values via @Pattern
- ConfigServerClient: drop unused getServerUrl()
- e2e_tests_ha.py: stop leaking subprocess output into an undrained pipe,
  fix a process-leak when a node fails to start mid-list, replace SKIP
  string-matching with an explicit SkipTest exception
- e2e_tests.py: thread the real API key returned by ensure_app() into the
  pull-path request instead of a hardcoded invalid key, same SkipTest fix

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>